# RFOCT

./: .gitignore  CITATION.cff  README.md  main.py  pyproject.toml
examples/: binary.py  multiclass.py
src/rfoct/: __init__.py  classification_evaluation.py  forest.py  genetic_algorithm.py  io.py  optimal_complexity_tree.py  sklearn.py  weighting.py
tests/: conftest.py  test_classifier.py  test_tree_forest.py  test_weighting_and_metrics.py
