[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfoct"
version = "0.1.0"
description = "Research reference implementation of Random Forest of Optimal-Complexity Trees"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["license"]
authors = [
  { name = "Vitalii O. Babenko" },
]
dependencies = [
  "numpy",
  "scikit-learn>=1.6",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.urls]
Publication = "https://doi.org/10.1007/s10559-023-00569-z"
Repository = "https://github.com/vbabenko97/RFOCT"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
